# ai-documentation-assistant-project

./: .gitignore  README.md
apps/backend/: .gitignore  main.py  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/routes/: routes.py
apps/backend/app/core/: config.py
apps/backend/app/db/: session.py
apps/backend/app/graphql/: context.py  mutations.py  queries.py  schema.py  types.py
apps/backend/app/graphql/mutations/: __init__.py  root.py
apps/backend/app/models/client_message/: client_message.py
apps/backend/app/models/conversation_messages/: conversational_messages.py
apps/backend/app/models/file/: chunks_of_file.py  upload_file.py
apps/backend/app/models/users/: user.py
apps/backend/app/schemas/auth/: login.py  register.py
apps/backend/app/schemas/upload-file/: upload_file.py
apps/backend/app/services/auth/: auth.py
apps/backend/app/services/client_file_embeddings_matching/: matching.py
apps/backend/migrations/versions/: 1d2bdc863cee_document_table.py  3368db566cfd_your_migration_message.py  3f4be29b7dbc_table_for_storing_chunks.py  4389a7c8ceda_added_embeddings_column.py  6aeb447f725e_table_for_storing_client_message.py  77604e523e59_document_table.py  9a8c895fc39d_your_migration_message.py  b9b64c7d2e9b_changed_type_of_id.py  c6354a8627b5_added_usedid_in_table_of_documentchunks.py  d963b40587b0_table_for_storing_client_message.py  d99436e61a92_added_conversation_message_table.py  dca3badf7198_create_users_table.py  f3ab8451a94c_document_table.py  fbcbb72373e5_removed_nullable_password.py
apps/frontend/: package-lock.json  (+1 more)
(+38 files in other folders)
