[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.12",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.1",
    "head>=1.0.0",
    "langchain-text-splitters>=1.1.2",
    "migrate>=0.3.8",
    "ollama>=0.6.2",
    "pgvector>=0.5.0",
    
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "scalar-fastapi>=1.8.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "strawberry-graphql[fastapi]>=0.320.4",
    "uvicorn>=0.49.0",
]


